--- a/_config.yml
+++ b/_config.yml
@@ -100,10 +100,10 @@ mathjax: true
 
 # Miscellaneous
 google_analytics: ''
-favicon: /img/avator.png
+favicon: /favicon.png
 
 #你的头像url
-avatar: ""
+avatar: "./img/avator.png"
 #是否开启分享
 share: true
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
