--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar: "./img/avator.png"
+avatar: /img/avator.png
 #是否开启分享
 share: true
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
@@ -128,4 +128,4 @@ friends:
 #不开启——
 #aboutme: false
 #开启——
-aboutme: 正在学js的小丁
+aboutme:
