--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: 丁一的博客
+subtitle: 激情每一天
 description:
 author: Ding Yi
 language: zh-Hans
